Added the API interface
